[package]
name = "unicorn"
version = "0.8.0"
edition = "2018"
authors = ["Sébastien Duquette <ekse.0x@gmail.com>"]
description = "Rust bindings for the unicorn emulator"
repository = "https://github.com/ekse/unicorn-rs"
documentation = "https://docs.rs/unicorn/"
license = "GPL-2.0"
readme = "README.md"

[build-dependencies]
gcc = "0.3"

[dependencies]
bitflags = "1.0"
libc = "0.2"
libunicorn-sys = { path = "libunicorn-sys", version = "0.8.0" }
