[package]
name = "unicorn"
version = "0.9.0"
authors = ["Sébastien Duquette <ekse.0x@gmail.com>"]
documentation = "https://docs.rs/unicorn/"
edition = "2018"
include = [
    "/.gitmodules",
    "/COPYING",
    "/Cargo.toml",
    "/README.md",
    "/src/*",
]
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/ekse/unicorn-rs"
description = "Rust bindings for the unicorn emulator"

[dependencies]
bitflags = "1.0"
libc = "0.2"
libunicorn-sys = { path = "libunicorn-sys", version = "0.9.0" }
