[package]
name = "libunicorn-sys"
version = "0.4.0"
authors = ["Sébastien Duquette <ekse.0x@gmail.com>"]
description = "Rust bindings for the unicorn emulator"
repository = "https://github.com/ekse/unicorn-rs"
documentation = "http://ekse.github.io/unicorn/"
license = "GPL-2.0"
build = "build.rs"
links = "unicorn"
exclude = [
    "unicorn/tests/*",
    "unicorn/bindings/*",
    "unicorn/docs/*"]

[lib]
name = "libunicorn_sys"

[build-dependencies]
gcc = "0.3"
os_type="0.5.0"

[dependencies]
bitflags = "0.6"
libc = "0.2.*"
