[package]
name = "libunicorn-sys"
version = "0.8.0"
edition = "2018"
authors = ["Sébastien Duquette <ekse.0x@gmail.com>"]
description = "Rust bindings for the unicorn emulator"
repository = "https://github.com/ekse/unicorn-rs"
documentation = "http://ekse.github.io/unicorn/"
license = "GPL-2.0"
build = "build.rs"
links = "unicorn"
exclude = [
    "unicorn/tests/*",
    "unicorn/bindings/*",
    "unicorn/docs/*",
    "unicorn/samples/*"]

[lib]
name = "libunicorn_sys"

[build-dependencies]
build-helper = "0.1"
os_type="2.2"
pkg-config = "0.3"

[dependencies]
bitflags = "1.0"
libc = { version = "0.2", default-features = false }

[features]
std = []
